# spatio_temporal_voxel_layer

./: CMakeLists.txt  LICENSE  README.md  costmap_plugins.xml  package.xml
cfg/: SpatioTemporalVoxelLayer.cfg  SpatioTemporalVoxelLayerPlugin.cfg
cmake/: find_dependencies.cmake
cmake/OpenVDB/: OpenVDB.cmake
cmake/blosc/: blosc.cmake
example/: config.yaml  constrained_indoor_environment_config.yaml  dynamic_environment_config.yaml  global_costmap_params.yaml  outdoor_environment_config.yaml  sparse_environment_config.yaml  standard_environment_config.yaml  standard_indoor_environment_config.yaml  vlp16_config.yaml
example_config/: config.yaml  global_costmap_params.yaml
include/spatio_temporal_voxel_layer/: frustum.hpp  level_set.h  level_set.hpp  measurement_buffer.hpp  measurement_reading.h  spatio_temporal_voxel_grid.hpp  spatio_temporal_voxel_layer.h  spatio_temporal_voxel_layer.hpp  vdb2pc.hpp
include/spatio_temporal_voxel_layer/frustum_models/: depth_camera_frustum.hpp  frustum.hpp  three_dimensional_lidar_frustum.hpp  vlp16_deadzone_frustum.hpp
msgs/: SaveGrid.srv
openvdb_vendor/: CMakeLists.txt  openvdb_vendor-extras.cmake  openvdb_vendor-extras.cmake.in  package.xml
openvdb_vendor/cmake/: FindBlosc.cmake  find_dependencies.cmake
openvdb_vendor/cmake/OpenVDB/: OpenVDB.cmake
scripts/: switch_costmap_profile
spatio_temporal_voxel_layer/: CMakeLists.txt  costmap_plugins.xml  package.xml
spatio_temporal_voxel_layer/cmake/: find_dependencies.cmake
spatio_temporal_voxel_layer/cmake/OpenVDB/: OpenVDB.cmake
spatio_temporal_voxel_layer/cmake/boost/: boost.cmake
spatio_temporal_voxel_layer/cmake/tbb/: tbb.cmake
spatio_temporal_voxel_layer/example/: constrained_indoor_environment_config.yaml  global_costmap_params.yaml  vlp16_config.yaml
spatio_temporal_voxel_layer/include/spatio_temporal_voxel_layer/: measurement_buffer.hpp  spatio_temporal_voxel_grid.hpp  spatio_temporal_voxel_layer.hpp  vdb2pc.hpp
spatio_temporal_voxel_layer/include/spatio_temporal_voxel_layer/frustum_models/: frustum.hpp
spatio_temporal_voxel_layer/src/: measurement_buffer.cpp  spatio_temporal_voxel_grid.cpp
src/: frustum.cpp  level_set.cpp  measurement_buffer.cpp  spatio_temporal_voxel_grid.cpp  spatio_temporal_voxel_layer.cpp  vdb2pc.cpp
src/frustum_models/: depth_camera_frustum.cpp  three_dimensional_lidar_frustum.cpp  vlp16_deadzone_frustum.cpp
srv/: SaveGrid.srv
test/: minimal_test.cpp  minimal_test.launch
