<?xml version="1.0"?>
<package>
  <name>spatio_temporal_voxel_layer</name>
  <version>1.4.5</version>
  <description>The spatio-temporal 3D obstacle costmap package</description>

  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>

 <license>LGPL v2.1</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>libopenvdb-dev</build_depend>
  <build_depend>libopenvdb</build_depend>
  <build_depend>tbb</build_depend>
  <build_depend>libopenexr-dev</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>pcl_conversions</run_depend> 
  <run_depend>pcl_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>libopenvdb-dev</run_depend>
  <run_depend>libopenvdb</run_depend>
  <run_depend>tbb</run_depend>
  <run_depend>libopenexr-dev</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml" />
  </export>
</package>
